# academics

./: .gitignore  LICENSE  README.md  app.py  celery_worker.py  convert_to_greyscale.py  create_test_db.py  database.sqlite  example.env  manage.py  new_publication_notification.py  open_alex_test.py  pyproject.toml  pytest.ini  requirements.dev  requirements.in  requirements.txt  run_jobs.py  run_update.py  run_worker.sh  scival_test.py  scopus_date_check.py  scopus_test.py  test_strict_acknowledgement.py
.github/: copilot-instructions.md
academics/: __init__.py  admin.py  config.py  model.py  publication_searching.py  security.py  service.py
academics/api/: __init__.py
academics/catalogs/: data_classes.py  jobs.py  model.py  open_alex.py  publication.py  scival.py  scopus.py  service.py  utils.py
academics/jobs/: catalogs.py  emails.py  publications.py
academics/model/: academic.py  catalog.py  folder.py  group.py  institutions.py  objective.py  publication.py  raw_data.py  security.py  theme.py
academics/scopus/: model.py  open_alex.py  service.py
academics/services/: academic_searching.py  folder.py  folder_academics.py  groups.py  publication_searching.py  publications.py  sources.py
academics/templates/: form_modal.html  modal.html
academics/ui/: __init__.py  forms.py
alembic/: env.py
alembic/versions/: 011c30aac055_unique_affiliationms.py  0181c5c58546_academic_potential_source.py  12850d8d6eac_folder_doi_user_relevance.py  132b00d54a32_remove_old_columns.py  (+124 more)
migrations/: migrate.cfg
tests/: __init__.py  conftest.py  faker.py
(+242 files in other folders)
